--- a/.github/workflows/deploy-winscp.yml
+++ b/.github/workflows/deploy-winscp.yml
@@ -13,5 +13,5 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
-        source: "chris/"
+        source: "chris/*"
         target: "/var/www/html/"
