--- a/.github/workflows/deploy-winscp.yml
+++ b/.github/workflows/deploy-winscp.yml
@@ -12,6 +12,6 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
-        port: 22
+        port: "22"
         source: "chris/*"
         target: "/var/www/html/"
